# grace-3.1-

./: .dockerignore  .editorconfig  .genesis_immutable_memory.json  .gitattributes  .gitignore  .immutable_audit_config.json  .pre-commit-config.yaml  .semgrepconfig.yml  100_PERCENT_500_PROBLEMS_PLAN.md  100_PERCENT_WITHOUT_LLM_ANALYSIS.md  98_PERCENT_PROJECTION_GAPS.md  ADVANCED_GRACE_ALIGNED_LLM_COMPLETE.md  ADVANCED_MEMORY_COGNITION.md  AI_RESEARCH_REPOSITORIES_INGESTION.md  ARCHITECTURE.md  AUTHENTICATION_SETUP.md  AUTOMATIC_BUG_FIXING_COMPLETE.md  AUTONOMOUS_CI_CD_ARCHITECTURE.md  BENCHMARK_EXPANSION_COMPLETE.md  BENCHMARK_INTEGRATION_COMPLETE.md  BENCHMARK_INTEGRATION_PLAN.md  BENCHMARK_PERFORMANCE_ANALYSIS.md  BENCHMARK_TEST_STATUS.md  BEYOND_LLM_CODING_AGENT.md  BIDIRECTIONAL_COMMUNICATION.md  BIGCODEBENCH_SANDBOX_INTEGRATION.md  BIGCODEBENCH_SANDBOX_INTEGRATION_COMPLETE.md  BOOT_GRACE.bat  BUGS_FIXED.md  BUG_FIXES_REPORT.md  BUSINESS_CAPABILITIES_ENABLED.md  CAN_SYSTEM_RUN_MODELS.md  CHANGELOG.md  CHAT_API_DOCUMENTATION.md  CI_CD_CONSOLIDATION_RECOMMENDATION.md  CLARITY_FRAMEWORK_ARCHITECTURE.md  CLONING_IN_PROGRESS.md  CODENET_AGENT_EVALUATION.md  CODE_ANALYZER_SELF_HEALING_GUIDE.md  CODE_ANALYZER_SELF_HEALING_SUMMARY.md  (+529 more)
.claude/: settings.local.json
.github/: copilot-instructions.md  pull_request_template.md
.grace/: consensus_log.jsonl  healing_log.jsonl  trust_scores.json
backend/: .dockerignore  .env.example  .genesis_file_versions.json  .genesis_file_versions.json.corrupt.bak  .whitelist_sources.json  API.md  DELIVERABLES.txt  Dockerfile  INGESTION_OPTIMIZATION_QUICK_GUIDE.md  INGESTION_OPTIMIZATION_SUMMARY.md  MIGRATIONS.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_SCRIPTS.md  MIGRATION_SCRIPTS_SUMMARY.md  QUICK_START_RESET.sh  README_MIGRATIONS.md  RESET_AND_REINGEST_GUIDE.md  RESET_AND_REINGEST_GUIDE.py  RESET_AND_REINGEST_GUIDE.py.backup  RESET_REINGEST_SUMMARY.md  __init__.py  add_suppression_checks.md  add_suppression_checks.py  agent_reminder.py  app.md  app.py  app.py.backup  architecture_gaps.md  architecture_map.json  ask_about_architecture.py  ask_architecture.py  ask_consensus.py  ask_consensus_about_healing.py  ask_models.py  autonomous_test_runner.md  autonomous_test_runner.py  backend_startup.txt  backend_startup2.txt  backend_startup3.txt  backend_startup_clean.txt  (+271 more)
benchmarks/: benchmark_embedding_optimized.py  benchmark_oracle_reasoning.py
commits_audit_diffs/: commit_0023f60b.diff  commit_08fd28bf.diff  commit_105cb302.diff  commit_23e30169.diff  commit_2d1498ff.diff  commit_450d4705.diff  commit_4f547266.diff  commit_7c3793a1.diff  commit_b8ccf1a3.diff  commit_c597df20.diff  commit_c8cf6e95.diff  commit_cc93e3ea.diff  commit_cf03acf9.diff  commit_ebde4194.diff
config/: braille_python_mapping.txt  grace_constitution.yaml
dev-console/: index.html  start.bat
docs/: ABSOLUTE_FINAL_VERIFICATION.md  ARCHITECTURE.md  ARCHITECTURE_VERSION_CONTROL.md  BACKEND_RESTART_REQUIRED.md  BEFORE_AND_AFTER_COMPARISON.md  CLARIFYING_QUESTIONS_IMPLEMENTED.md  CLONING_IN_PROGRESS.md  CODING_AGENT_UNIFIED.md  COGNITIVE_BLUEPRINT.md  COMMIT_VERIFICATION.md  COMPLETE_AUTONOMOUS_INGESTION_CYCLE.md  COMPLETION_ASSESSMENT.md  COMPLETION_CHECKLIST.md  CONFIDENCE_SCORING_COMPLETE.md  CONVERSATION_MEMORY_FINAL_STATUS.md  CONVERSATION_MEMORY_IMPLEMENTED.md  DAILY_WORK_SUMMARY_2026-02-06.md  DATA_INTEGRITY_PROOF_SYSTEM.md  DATA_INTEGRITY_SUMMARY.md  DELIVERY_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DETERMINISTIC_SYSTEM_HANDOVER.md  DEVELOPER_HANDOVER.md  DIRECTORY_HIERARCHY_GENESIS_KEYS.md  ERROR_RUNBOOK_GRACE_LEARN.md  FILE_INGESTION_FINAL_CHECKLIST.md  GDP_DOCUMENT_FIX.md  GENESIS_CAPABILITIES_ENABLED.md  GENESIS_COMPREHENSIVE_TRACKING.md  GENESIS_KEY_SETUP.md  GENESIS_KEY_TRACKING_COMPLETE.md  GET_GENESIS_SQL_WORKING.md  GIT_MERGE_UNRELATED_HISTORIES.md  GRACEOS_COMPLETE_SYSTEM_BREAKDOWN.md  GRACE_AS_GITHUB_REPLACEMENT.md  GRACE_BACKGROUND_RUNNING.md  GRACE_DEBUGGING_KNOWLEDGE_BASE.md  GRACE_FILE_MANAGEMENT_VISION.md  GRACE_GENESIS_KEY_ENHANCEMENTS.md  GRACE_GENESIS_KEY_TRACKING.md  (+47 more)
frontend/: .dockerignore  .env.example  API_CONNECTION_STATUS.md  Dockerfile  build_output.txt  eslint.config.js  eslint_out.txt  final_lint_compact.txt  frontend_build_output.txt  full_lint.json  lint-output.json  lint_errors.txt  lint_output.txt  nginx.conf  package-lock.json  package.json  playwright.config.js  test.js  vite.config.js
grace-os-vscode/: README.md  grace-os-3.1.0.vsix  package-lock.json  package.json  tsconfig.json
grace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
k8s/: deployment.yaml  services.yaml
knowledge_base/: .ingestion_state.json  api_design_patterns.md  devops_docker_deployment.md  grace_architecture_deep.md  javascript_react_guide.md  machine_learning_fundamentals.md  python_programming.md  rag_techniques.md  self_improvement_patterns.md
launcher/: README.md  __init__.py  circuit_breaker.py  dependency_resolver.py  folder_validator.py  graceful_degradation.py  health_checker.py  launcher.py  logging_db.py  nlp_error_processor.py  preflight_checker.py  self_healing_integration.py  service_manager.py  sqlite_logger.py  version.py  versions.json  view_logs.py
monitoring/: grafana-dashboard.json
pipelines/: grace-ci.yaml  grace-deploy.yaml
qdrant_fresh/: meta.json
qdrant_storage/: raft_state.json
scripts/: MOTHER_STRESS_TEST_README.md  README.md  build.ps1  (+130 more)
(+4328 files in other folders)
