# =============================================================================
# GRACE - Enterprise Python Project Configuration
# =============================================================================
# Modern Python packaging with pyproject.toml (PEP 517/518/621)
# Build: pip install build && python -m build
# Install: pip install -e .
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "grace"
version = "3.1.0"
description = "GRACE - Generative Reasoning and Autonomous Coding Engine"
readme = "docs/README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Aaron", email = "aaron@grace.ai"}
]
keywords = [
    "ai", "coding-agent", "llm", "autonomous", "self-healing",
    "code-generation", "machine-learning", "deep-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.4.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "watchfiles>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.3.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
    "pre-commit>=3.3.0",
    "ipython>=8.14.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "semgrep>=1.30.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.1.0",
    "mkdocstrings[python]>=0.22.0",
]
gpu = [
    "torch[cuda]>=2.0.0",
    "nvidia-ml-py>=12.535.0",
]
all = ["grace[dev,security,docs]"]

[project.scripts]
grace = "launcher.launcher:main"
grace-cli = "backend.cli:main"
grace-health = "launcher.health_checker:main"

[project.urls]
Homepage = "https://github.com/aaron031291/grace-3.1-"
Documentation = "https://grace.ai/docs"
Repository = "https://github.com/aaron031291/grace-3.1-"
Issues = "https://github.com/aaron031291/grace-3.1-/issues"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.setuptools]
packages = ["backend", "launcher", "tools"]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["backend", "launcher"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/tool-study/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 60

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tool-study
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "tool-study",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "tool-study",
    "tests",
    "build",
]

[tool.bandit]
exclude_dirs = ["tests", "tool-study", ".venv"]
skips = ["B101", "B311"]

[tool.isort]
profile = "black"
line_length = 120
skip = [".venv", "tool-study", "build", "dist"]
